<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.activity.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_image_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        app:cardElevation="5dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_person"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/image_person"
            android:layout_margin="15dp"/>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/EditText"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/email"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toBottomOf="@id/card_view_image_person"
        />

    <EditText
        android:id="@+id/edit_text_tag"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/tag"
        style="@style/EditText"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/name"
        style="@style/EditText"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        style="@style/EditText"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="80dp"
        android:text="@string/register"
        android:layout_marginTop="40dp"
        app:backgroundTint="@color/blue"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

</androidx.constraintlayout.widget.ConstraintLayout>